# htmlgen-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: body.rs  head.rs  html.rs  lib.rs
